opensesame (2.9.3~pre1-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Font size was specified in points instead of pixels in GUI
    - Legacy back-end crashed when specifying system font in general properties
    - Show arrow-size field in sketchpad

 -- Sebastiaan Mathot <sebastiaan@mantis>  Fri, 16 Jan 2015 09:59:40 +0100

opensesame (2.9.2-ubuntu1) utopic; urgency=medium

  * Bugs fixed
    - Fix numeric textline elements in sketchpad (#292)
    - 'Reset feedback variables' option restored in feedback item (#297)
    - Safely print unicode debug output (convert to ascii)
    - Fix unicode bug in opensesamerun gui
    - Convert backspace key to key name (#286)
    - Fix a bug with variably defined properties of circle elements in sketchpad GUI (#300)
    - Fix circle properties in xpyriment back-end (#299)
    - Fix a bug with variably defined properties of Gabor and noise patches in sketchpad GUI
    - Fix a bug when permanently deleting an item that is present in multiple sequence items
  * Improvements
    - Use better fallback image in sketchpad
    - Deprecate transparent variable management (#294)
    - Add custom icon to debian packaging (#296)
    - Form_base plug-in shows script by default (#298)
    - Add custom icon to debian packaging
    - Deprecate transparent variable management option
    - More comprehensive translation possible
    - Hide xpyriment-gst back-end (not ready for production)
    - Custom cursor in sketchpad for increased visibility
    - Indicate whether python-bidi is available in general properties tab
    - List variables in alphabetical order in OpenSesame script
    - Add PsychoPy API menu to help extension
  * Translation updates
    - German translation updated (de_DE)
    - Add Spanish translation (es_ES)
  * Windows packaging
    - Include wx for PsychoPy monitor center (#295)
    - Include quest staircase plug-ins

 -- Sebastiaan Mathot <s.mathot@cogsci.nl>  Tue, 18 Nov 2014 14:02:42 +0100
