@@ -4,6 +4,9 @@ opensesame (2.9.3~pre1-ubuntu1) utopic; urgency=medium
     - Font size was specified in points instead of pixels in GUI
     - Legacy back-end crashed when specifying system font in general properties
     - Show arrow-size field in sketchpad
+    - Fix a bug where description changes weren't applied
+  * Improvements
+    - Allow descriptions to wrap over multiple lines for better screen use
 
  -- Sebastiaan Mathot <sebastiaan@mantis>  Fri, 16 Jan 2015 09:59:40 +0100
 
